src/objects/X3_0_Sales_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Account_Snap__c</fullName>
        <label>Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Snap__c</fullName>
        <label>Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Date_Snap__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>District_Snap__c</fullName>
        <label>District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_Snap__c</fullName>
        <label>Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Snap__c</fullName>
        <label>Lead Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Lvl_1_Snap__c</fullName>
        <label>Manager (Lvl 1)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Quality_Snap__c</fullName>
        <label>Opp Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name_Snap__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>3.0 Sales Snapshots</relationshipLabel>
        <relationshipName>X3_0_Sales_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Snap__c</fullName>
        <label>Opportunity Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipe_Snap__c</fullName>
        <label>Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Probability_Snap__c</fullName>
        <label>Probability (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Stage_Snap__c</fullName>
        <label>Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Snap__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>3.0 Sales Snapshot</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3.0 Sales Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>